@@ -11,6 +11,8 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -41,7 +43,7 @@ public class Printer implements Monitoring
         try {
             response = readJsonFromUrl(apiUrl);
         }
-        catch (IOException ex) {
+        catch (IOException | URISyntaxException ex) {
             MonitoringResult result = new MonitoringResult("Printer - API");
             result.Information = ex.getClass().getName() + ": " + ex.getMessage();
             return List.of(result);
@@ -89,8 +91,8 @@ public class Printer implements Monitoring
         };
     }
 
-    private JSONObject readJsonFromUrl(String url) throws IOException {
-        try (InputStream is = new URL(url).openStream())
+    private JSONObject readJsonFromUrl(String url) throws IOException, URISyntaxException {
+        try (InputStream is = new URI(url).toURL().openStream())
         {
             BufferedReader rd = new BufferedReader(new InputStreamReader(is, StandardCharsets.UTF_8));
             StringBuilder sb = new StringBuilder();
